--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "cross-env": "^10.1.0",
+    "dotenv": "^17.2.3",
     "morgan": "^1.10.1",
     "nestjs-pino": "^4.5.0",
     "opossum": "^9.0.0",
